<resources>

    <string name="app_name">AmarOshudh</string>

    <string name="today_medicine">আজকের ঔষধ</string>

    <string name="empty_title">No medicines added yet</string>

    <string name="empty_description">
        Tap the + button below to add your first medicine.
    </string>

    <string name="add_medicine">Add Medicine</string>

    <string name="medicine_name">Medicine Name</string>

    <string name="enter_medicine_name">Enter medicine name</string>

    <string name="meal_time">খাওয়ার সময়</string>
    <string name="before_meal">খাওয়ার আগে</string>
    <string name="after_meal">খাওয়ার পরে</string>

    <string name="duration">সময়কাল</string>
    <string name="weeks">সপ্তাহ</string>
    <string name="months">মাস</string>

    <string name="unit">একক</string>

</resources>